--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Macondo&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+/* css variables */
+
+:root {
+  --primary-font: "Inter", sans-serif;
+  --secondary-font: "Macondo", sans-serif;
+  --secondary-color: #aa9581;
+  --highlight-color: #41babe;
+  --light-highlight-color: #7a9fc2;
+}
 /* Reset CSS */
 
 * {
@@ -9,9 +18,13 @@
 }
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: var(--primary-font);
 }
 
 h1 {
-  font-family: "Macondo", sans-serif;
+  font-family: var(--secondary-font);
+}
+
+.sub-heading-color {
+  color: var(--highlight-color);
 }
