--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,20 +11,15 @@
 }
 /* Reset CSS */
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.col-12 {
+  color: white !important;
+  background-color: #41babe;
+  border: 1px solid #fff;
 }
 
-body {
-  font-family: var(--primary-font);
-}
-
-h1 {
-  font-family: var(--secondary-font);
-}
-
-.sub-heading-color {
-  color: var(--highlight-color);
-}
+/* footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+} */
