--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,20 +5,27 @@
 :root {
   --primary-font: "Inter", sans-serif;
   --secondary-font: "Macondo", sans-serif;
+  --primary-color: #3a2620;
   --secondary-color: #aa9581;
   --highlight-color: #41babe;
   --light-highlight-color: #7a9fc2;
   --background-color: blue;
-  --nav-color: darkgray;
-  --text-color: white;
+  --highlight-color-light: #7a9fc2; /* light blue */
+  --text-color: #fff;
 }
 
 /* nav bar */
 
 #navbar {
-  background-color: var(--nav-color);
   font-family: var(--primary-font);
+  background-color: var(--primary-color);
 }
+.section {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+/* Navbar */
 
 #navbar a {
   color: var(--text-color);
@@ -35,6 +42,15 @@ h3 {
   color: var(--primary-color);
   text-transform: uppercase;
 }
+
+.sub-heading-color {
+  color: var(--highlight-color);
+}
+
+#header .lead {
+  font-family: var(--secondary-font);
+}
+
 footer {
   background-color: var(--background-color);
   color: white;
