--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Macondo&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+/* css reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
 /* css variables */
 
 :root {
@@ -79,5 +88,18 @@ footer {
 @media (min-width: 768px) {
   .card {
     min-height: 65vh;
+  }
+
+  .card .card-body {
+    min-height: 250px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .card {
+    min-height: 30vh;
+  }
+  .card .card-body {
+    min-height: 320px;
   }
 }
