include and style contact section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,28 +78,51 @@ h2 {
 }
 
 footer {
-  background-color: var(--background-color);
-  color: white;
   font-family: var(--primary-font);
+  background-color: var(--primary-color);
+}
+
+footer a {
+  margin-right: 25px;
+  font-size: 2rem;
+}
+
+footer h2,
+i {
+  color: var(--text-color);
+  margin-right: 25px;
+}
+
+footer p,
+address {
+  color: #fff;
+}
+
+#opening-times {
+  font-family: var(--secondary-font);
+  color: var(--text-color);
+}
+
+tr > td:first-child {
+  font-weight: bolder;
 }
 
 /* media queries */
 
 @media (min-width: 768px) {
   .card {
-    min-height: 65vh;
-  }
-
-  .card .card-body {
-    min-height: 250px;
+    min-height: 100vh;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1048px) {
   .card {
-    min-height: 30vh;
+    min-height: 100vh;
   }
-  .card .card-body {
-    min-height: 320px;
+}
+
+@media screen and (min-width: 1200px) {
+  .card {
+    min-height: 80vh;
   }
 }
